# text-translation

./: .gitmodules  AUTHORS  CMakeLists.txt  CompileProto.cmake  Dockerfile  Dockerfile.marian  LICENCE  README.md  config.yaml  docker-compose-marian.yml  docker-compose.yml  install.sh  install_grpc.sh  models_config.txt  translate_api.py
include/: abstract_server.h  bpe.h  grpc_route_nmt_impl.h  grpc_server.h  nmt.h  processor.h  qnlu.h  qnmt.h  qsmt.h  qtokenizer.h  rest_server.h  smt.h  spm.h  utils.h
libCTranslate/: CMakeLists.txt  cbuild.sh  compile.bash
libCTranslate/include/: BatchReader.h  BatchWriter.h  bpe.h  tokenizer.h  utils.h
libCTranslate/src/: BatchReader.cpp  BatchWriter.cpp  bpe.cpp  qtranslate.cpp  tokenizer.cpp  translate.cpp.bck  utils.cpp
protos/: grpc_nlu.proto  grpc_nmt.proto
src/: abstract_server.cpp  api_classification.cpp  api_local_nlu.cpp  api_local_nmt.cpp  api_remote_nmt.cpp  bpe.cpp  client_marian.cpp  client_moses.cpp  grpc_route_nmt_impl.cpp  grpc_server.cpp  local_nlu.cpp  local_nlu.cpp.bck  local_nmt.cpp  moses.cpp  nmt.cpp  qnlu.cpp  qnmt.cpp  qsmt.cpp  qtokenizer.cpp  rest_server.cpp  smt.cpp  spm.cpp  text-translate.cpp  text-translation.cpp  tokenizer.cpp  utils.cpp
